--- a/celltracker.ui
+++ b/celltracker.ui
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <interface>
   <object class="ttk.Frame" id="mainwindow">
-    <property name="height">1250</property>
+    <property name="height">1200</property>
     <property name="width">1100</property>
     <layout>
       <property name="column">0</property>
@@ -23,10 +23,6 @@
           <property name="pad">17</property>
         </row>
         <row id="3">
-          <property name="minsize">12</property>
-          <property name="pad">17</property>
-        </row>
-        <row id="4">
           <property name="minsize">12</property>
           <property name="pad">17</property>
         </row>
@@ -257,7 +253,7 @@
         <property name="height">120</property>
         <property name="text" translatable="yes">Segmentaton techniques</property>
         <property name="underline">2</property>
-        <property name="width">200</property>
+        <property name="width">700</property>
         <layout>
           <property name="column">0</property>
           <property name="columnspan">3</property>
@@ -265,6 +261,11 @@
           <property name="row">3</property>
           <property name="rowspan">1</property>
           <property name="sticky">new</property>
+          <columns>
+            <column id="0">
+              <property name="minsize">5</property>
+            </column>
+          </columns>
         </layout>
         <child>
           <object class="ttk.Radiobutton" id="Radiobutton_2">
@@ -274,7 +275,7 @@
             <layout>
               <property name="column">0</property>
               <property name="propagate">True</property>
-              <property name="row">0</property>
+              <property name="row">3</property>
               <property name="sticky">ew</property>
             </layout>
           </object>
@@ -319,32 +320,44 @@
             </layout>
           </object>
         </child>
-      </object>
-    </child>
-    <child>
-      <object class="ttk.Labelframe" id="Labelframe_17">
-        <property name="text" translatable="yes">Segmentation preview</property>
-        <property name="width">500</property>
-        <layout>
-          <property name="column">0</property>
-          <property name="columnspan">3</property>
-          <property name="propagate">True</property>
-          <property name="row">4</property>
-          <property name="sticky">new</property>
-        </layout>
         <child>
-          <object class="tk.Canvas" id="Canvas_1">
-            <property name="background">#d9c883</property>
-            <property name="borderwidth">2</property>
-            <property name="height">400</property>
-            <property name="width">550</property>
+          <object class="ttk.Radiobutton" id="Radiobutton_11">
+            <property name="text" translatable="yes">Basic</property>
+            <property name="value">5</property>
+            <property name="variable">int:seg</property>
             <layout>
               <property name="column">0</property>
-              <property name="columnspan">1</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property name="sticky">nsew</property>
+              <property name="sticky">ew</property>
             </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Labelframe" id="Labelframe_4">
+            <property name="height">420</property>
+            <property name="text" translatable="yes">Preview</property>
+            <property name="width">555</property>
+            <layout>
+              <property name="column">0</property>
+              <property name="columnspan">4</property>
+              <property name="pady">10</property>
+              <property name="propagate">True</property>
+              <property name="row">4</property>
+              <property name="sticky">sew</property>
+            </layout>
+            <child>
+              <object class="tk.Canvas" id="Canvas_5">
+                <property name="background">#c4d900</property>
+                <property name="height">400</property>
+                <property name="width">555</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="propagate">True</property>
+                  <property name="row">0</property>
+                </layout>
+              </object>
+            </child>
           </object>
         </child>
       </object>
@@ -413,49 +426,16 @@
         </layout>
         <child>
           <object class="ttk.Radiobutton" id="Radiobutton_5">
-            <property name="command">centroid_on_click</property>
-            <property name="text" translatable="yes">centroid
+            <property name="state">disabled</property>
+            <property name="text" translatable="yes">kalman
 </property>
             <property name="value">5</property>
             <property name="variable">int:track</property>
             <layout>
               <property name="column">0</property>
-              <property name="padx">4</property>
-              <property name="pady">0</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property name="sticky">nw</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="ttk.Radiobutton" id="Radiobutton_6">
-            <property name="command">shape_on_click</property>
-            <property name="text" translatable="yes">shape</property>
-            <property name="value">6</property>
-            <property name="variable">int:track</property>
-            <layout>
-              <property name="column">1</property>
-              <property name="padx">5</property>
-              <property name="pady">0</property>
-              <property name="propagate">True</property>
-              <property name="row">0</property>
-              <property name="sticky">ne</property>
-            </layout>
-          </object>
-        </child>
-        <child>
-          <object class="ttk.Radiobutton" id="Radiobutton_7">
-            <property name="command">shape_centroid_on_click</property>
-            <property name="text" translatable="yes">shape+centroid</property>
-            <property name="value">7</property>
-            <property name="variable">int:track</property>
-            <layout>
-              <property name="column">2</property>
-              <property name="padx">5</property>
-              <property name="propagate">True</property>
-              <property name="row">0</property>
-              <property name="sticky">ne</property>
+              <property name="sticky">sew</property>
             </layout>
           </object>
         </child>
@@ -470,7 +450,7 @@
               <property name="padx">5</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property name="sticky">ne</property>
+              <property name="sticky">ew</property>
             </layout>
           </object>
         </child>
@@ -480,24 +460,32 @@
             <property name="default">disabled</property>
             <property name="text" translatable="yes">track</property>
             <layout>
-              <property name="column">2</property>
+              <property name="column">1</property>
+              <property name="propagate">True</property>
+              <property name="row">2</property>
+            </layout>
+          </object>
+        </child>
+        <child>
+          <object class="ttk.Checkbutton" id="Checkbutton_3">
+            <property name="text" translatable="yes">color trajectories</property>
+            <property name="variable">int:intColor</property>
+            <layout>
+              <property name="column">0</property>
               <property name="propagate">True</property>
               <property name="row">1</property>
             </layout>
           </object>
         </child>
         <child>
-          <object class="ttk.Progressbar" id="Progressbar_2">
-            <property name="maximum">100</property>
-            <property name="orient">horizontal</property>
-            <property name="value">50</property>
-            <property name="variable">int:trackpar</property>
+          <object class="ttk.Checkbutton" id="Checkbutton_4">
+            <property name="text" translatable="yes">show cell ID</property>
+            <property name="variable">int:intIDs</property>
             <layout>
-              <property name="column">0</property>
-              <property name="columnspan">5</property>
+              <property name="column">1</property>
+              <property name="padx">5</property>
               <property name="propagate">True</property>
-              <property name="row">2</property>
-              <property name="sticky">ew</property>
+              <property name="row">1</property>
             </layout>
           </object>
         </child>
@@ -517,12 +505,14 @@
         </layout>
         <child>
           <object class="tk.Canvas" id="Canvas_2">
-            <property name="background">#3e6400</property>
+            <property name="background">#506b23</property>
             <property name="height">400</property>
             <property name="insertofftime">0</property>
             <property name="width">520</property>
             <layout>
               <property name="column">0</property>
+              <property name="ipadx">0</property>
+              <property name="ipady">0</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
             </layout>
@@ -544,6 +534,7 @@
         </layout>
         <child>
           <object class="ttk.Button" id="Button_3">
+            <property name="command">generate_click</property>
             <property name="text" translatable="yes">Generate  &amp; download a tracking movie</property>
             <layout>
               <property name="column">0</property>
@@ -565,6 +556,7 @@
         </child>
         <child>
           <object class="ttk.Button" id="Button_5">
+            <property name="command">save_as_zip</property>
             <property name="text" translatable="yes">Download a zip file </property>
             <layout>
               <property name="column">2</property>
@@ -574,57 +566,115 @@
             </layout>
           </object>
         </child>
-      </object>
-    </child>
-    <child>
-      <object class="ttk.Labelframe" id="Labelframe_3">
-        <property name="height">90</property>
-        <property name="text" translatable="yes">About
-</property>
-        <property name="width">200</property>
-        <layout>
-          <property name="column">3</property>
-          <property name="propagate">True</property>
-          <property name="row">4</property>
-          <property name="sticky">sew</property>
-          <columns>
-            <column id="0">
-              <property name="minsize">5</property>
-            </column>
-          </columns>
-        </layout>
         <child>
-          <object class="ttk.Button" id="Button_6">
-            <property name="text" translatable="yes">About the toolbox</property>
-            <property name="width">20</property>
+          <object class="ttk.Labelframe" id="Labelframe_5">
+            <property name="height">335</property>
+            <property name="text" translatable="yes">Sample of trajectories</property>
+            <property name="width">100</property>
             <layout>
               <property name="column">0</property>
+              <property name="columnspan">3</property>
+              <property name="pady">10</property>
               <property name="propagate">True</property>
-              <property name="row">0</property>
-              <property name="sticky">new</property>
+              <property name="row">1</property>
+              <property name="sticky">ew</property>
+              <rows>
+                <row id="0">
+                  <property name="minsize">14</property>
+                </row>
+              </rows>
+              <columns>
+                <column id="0">
+                  <property name="minsize">5</property>
+                </column>
+              </columns>
             </layout>
+            <child>
+              <object class="ttk.Label" id="Label_6">
+                <property name="text" translatable="yes">Time</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="propagate">True</property>
+                  <property name="row">0</property>
+                  <property name="sticky">new</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="Label_7">
+                <property name="text" translatable="yes">Xtrajectory</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="columnspan">1</property>
+                  <property name="padx">3</property>
+                  <property name="propagate">True</property>
+                  <property name="row">0</property>
+                  <property name="sticky">new</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="Label_8">
+                <property name="text" translatable="yes">Ytrajectory</property>
+                <layout>
+                  <property name="column">4</property>
+                  <property name="padx">4</property>
+                  <property name="propagate">True</property>
+                  <property name="row">0</property>
+                  <property name="sticky">new</property>
+                </layout>
+              </object>
+            </child>
           </object>
         </child>
         <child>
-          <object class="ttk.Button" id="Button_7">
-            <property name="text" translatable="yes">Another dataset, clear?</property>
-            <property name="width">20</property>
+          <object class="ttk.Labelframe" id="Labelframe_6">
+            <property name="height">200</property>
+            <property name="text" translatable="yes">Toolbox info</property>
+            <property name="width">200</property>
             <layout>
-              <property name="column">3</property>
+              <property name="column">0</property>
+              <property name="columnspan">3</property>
+              <property name="pady">50</property>
               <property name="propagate">True</property>
-              <property name="row">0</property>
-              <property name="sticky">new</property>
+              <property name="row">2</property>
+              <property name="sticky">ew</property>
             </layout>
-          </object>
-        </child>
-        <child>
-          <object class="ttk.Button" id="Button_9">
-            <property name="text" translatable="yes">Quit</property>
-            <layout>
-              <property name="column">4</property>
-              <property name="propagate">True</property>
-              <property name="row">0</property>
-            </layout>
+            <child>
+              <object class="ttk.Button" id="Button_8">
+                <property name="text" translatable="yes">Help</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="propagate">True</property>
+                  <property name="row">0</property>
+                  <property name="sticky">ew</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Button" id="Button_11">
+                <property name="command">clear_frame(self, master)</property>
+                <property name="text" translatable="yes">Another dataset, clear?!</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="padx">20</property>
+                  <property name="propagate">True</property>
+                  <property name="row">0</property>
+                  <property name="sticky">ew</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Button" id="Button_12">
+                <property name="text" translatable="yes">Quit</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="padx">10</property>
+                  <property name="propagate">True</property>
+                  <property name="row">0</property>
+                </layout>
+              </object>
+            </child>
           </object>
         </child>
       </object>
